--- a/package.json
+++ b/package.json
@@ -1,54 +1,35 @@
 {
-  "name": "weatherwallpaper",
-  "main": "expo-router/entry",
+  "name": "weatherwallapaper-back",
   "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "type": "commonjs",
   "scripts": {
-    "start": "expo start",
-    "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo run:android",
-    "ios": "expo run:ios",
-    "web": "expo start --web",
-    "test": "jest --watchAll",
-    "lint": "expo lint"
+    "start": "tsc && ts-node --esm dist/index.js",
+    "dev": "nodemon --watch src --exec ts-node src/index.ts"
   },
-  "jest": {
-    "preset": "jest-expo"
-  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "@expo/vector-icons": "^14.0.0",
-    "@react-navigation/native": "^6.0.2",
-    "expo": "~51.0.14",
-    "expo-build-properties": "~0.12.3",
-    "expo-constants": "~16.0.2",
-    "expo-font": "~12.0.7",
-    "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.16",
-    "expo-splash-screen": "~0.27.5",
-    "expo-status-bar": "~1.12.1",
-    "expo-system-ui": "~3.0.6",
-    "expo-web-browser": "~13.0.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.74.2",
-    "react-native-branch": "^6.2.2",
-    "react-native-gesture-handler": "~2.16.1",
-    "react-native-manage-wallpaper": "^1.2.1",
-    "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "4.10.1",
-    "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10",
-    "styled-components": "^6.1.11",
-    "expo-image-picker": "~15.0.6"
+    "express": "^4.19.2",
+    "multer": "^1.4.5-lts.1",
+    "nodemon": "^3.1.4",
+    "pg": "^8.12.0",
+    "reflect-metadata": "^0.2.2",
+    "sharp": "^0.33.4",
+    "typeorm": "^0.3.20"
+  },
+  "nodemonConfig": {
+    "ignore": [
+      "**/test/**",
+      "**/docs/**"
+    ],
+    "delay": 2500
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@types/jest": "^29.5.12",
-    "@types/react": "~18.2.45",
-    "@types/react-test-renderer": "^18.0.7",
-    "jest": "^29.2.1",
-    "jest-expo": "~51.0.1",
-    "react-test-renderer": "18.2.0",
-    "typescript": "~5.3.3"
-  },
-  "private": true
+    "@types/multer": "^1.4.11",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.5.2"
+  }
 }
